--- a/public/CSS/cadastro.css
+++ b/public/CSS/cadastro.css
@@ -67,13 +67,13 @@ header ul {
   justify-content: center;
   align-items: center;
   width: 100vw;
-  height: 75vh;
+  height: 85vh;
 }
 
 .container {
   display: flex;
   background-color: #D9D9D9;
-  height: 75%;
+  height: 90%;
   width: 70%;
   border-radius: 15px;
   overflow: hidden;
@@ -203,7 +203,7 @@ input:focus {
   flex-direction: column;
 }
 
-.campo input, .campo3 input{
+.campo input, .campo3 input, .campo select{
   background-color: #00283a;
   border: none;
   font-weight: normal;
@@ -271,6 +271,7 @@ input:focus {
 
 .cadastro2{
     display: flex;
+    justify-content: center;
     height: 100%;
     width: 78%;
     background-color: #f0f0f0;
@@ -280,7 +281,7 @@ input:focus {
 /* Footer */
 footer {
   width: 100vw;
-  height: 15vh;
+  height: 5vh;
   background-color: #00283a;
   display: flex;
   justify-content: center;
@@ -347,7 +348,7 @@ footer h1 {
     .container {
         flex-direction: column;
         width: 85%;
-        height: 85%;
+        height: 97%;
     }
 
     .parte1 {
@@ -396,6 +397,17 @@ footer h1 {
 }
 
 .campo input {
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  padding-left: 10px;
+  background-color: #00283a;
+  border: none;
+  color: #fff;
+}
+
+.campo select {
+  font-size: 16px;
   width: 100%;
   height: 40px;
   border-radius: 5px;
