--- a/public/CSS/comparativos.css
+++ b/public/CSS/comparativos.css
@@ -123,7 +123,7 @@ hr {
   height: 70%;
 }
 
-.card-img {
+.card-img {   
   background: #004d66;
   height: 200px;
   border-radius: 8px;
@@ -197,3 +197,64 @@ hr {
 .sidebar a:hover {
   background-color: #005b7a; 
 } 
+
+/* MODAL - FUNDO ESCURO */
+.modal {
+    display: none; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0,0,0,0.5);
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+}
+
+/* CAIXA DO MODAL */
+.modal-content {
+    background: #fff;
+    width: 380px;
+    padding: 20px;
+    border-radius: 12px;
+    text-align: center;
+    color: #00283a;
+}
+
+/* TÍTULO */
+.modal-content h3 {
+    margin-bottom: 15px;
+}
+
+/* SELECTS */
+.modal-content select {
+    width: 100%;
+    padding: 8px;
+    margin: 8px 0;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+}
+
+/* BOTÕES */
+.modal-buttons {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 15px;
+}
+
+.modal-buttons button {
+    padding: 8px 12px;
+    border-radius: 6px;
+    border: none;
+    cursor: pointer;
+}
+
+.modal-buttons .confirmar {
+    background-color: #00354d;
+    color: white;
+}
+
+.modal-buttons button:hover {
+    opacity: 0.8;
+}
