--- a/public/CSS/comparativos.css
+++ b/public/CSS/comparativos.css
@@ -103,11 +103,11 @@ hr {
   grid-template-columns: repeat(3, 1fr); 
   justify-content: center;
   padding-left: 6%;  
-
   max-height: 550px;  
   overflow-y: auto;   
   gap: 20px;  
   height: 465px;
+  overflow: visible;
 }
 
 .card {
@@ -121,18 +121,17 @@ hr {
   justify-content: space-between;
   width: 80%;
   height: 70%;
+  transition: 0.25s ease;
 }
 
-.card-img {   
-  background: #004d66;
-  height: 200px;
-  border-radius: 8px;
-  margin-bottom: 10px;
-  font-size: 12px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
+.card:hover {
+  background: rgb(1, 82, 104); 
+  cursor: pointer;
+  transition: 0.25s ease;
+}
+
+.card.selecionado {
+    outline: 4px solid black;
 }
 
 .card-body h3 {
@@ -174,8 +173,6 @@ hr {
     gap: 30px;
 }  
 
-
-
  .sidebar a {
     color: white;
     font-size: 25px;
@@ -198,7 +195,7 @@ hr {
   background-color: #005b7a; 
 } 
 
-/* MODAL - FUNDO ESCURO */
+/* modal*/
 .modal {
     display: none; 
     position: fixed;
@@ -212,7 +209,7 @@ hr {
     z-index: 999;
 }
 
-/* CAIXA DO MODAL */
+/* container modal */
 .modal-content {
     background: #fff;
     width: 380px;
@@ -222,12 +219,12 @@ hr {
     color: #00283a;
 }
 
-/* TÍTULO */
+/* titulo */
 .modal-content h3 {
     margin-bottom: 15px;
 }
 
-/* SELECTS */
+/* select do modal */
 .modal-content select {
     width: 100%;
     padding: 8px;
@@ -236,7 +233,7 @@ hr {
     border-radius: 6px;
 }
 
-/* BOTÕES */
+/* botoes do modal */
 .modal-buttons {
     display: flex;
     justify-content: space-between;
@@ -258,3 +255,89 @@ hr {
 .modal-buttons button:hover {
     opacity: 0.8;
 }
+
+/*modal input*/
+.modal-content input, .modal-content select {
+    width: 100%;
+    margin-top: 8px;
+    margin-bottom: 15px;
+    padding: 8px 10px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    font-size: 14px;
+}
+
+/* Overlay */
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0,0,0,0.65);
+    display: none; /* inicialmente escondido */
+    align-items: center;
+    justify-content: center;
+    z-index: 999;
+}
+
+/* Caixa do modal */
+.modal-content {
+    background: #fff;
+    width: 450px;
+    padding: 30px;
+    border-radius: 12px;
+    position: relative;
+    box-shadow: 0 5px 25px rgba(0,0,0,0.25);
+    animation: modalEntrada 0.25s ease;
+}
+
+
+/* Botão fechar */
+.modal-close {
+    position: absolute;
+    top: 10px;
+    right: 12px;
+    font-size: 26px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    opacity: 0.7;
+}
+.modal-close:hover {
+    opacity: 1;
+}
+
+/* Título */
+#modal-titulo {
+    margin-top: 10px;
+    font-size: 22px;
+    margin-bottom: 20px;
+}
+
+/* Área de info */
+.modal-info p {
+    font-size: 16px;
+    margin: 10px 0;
+}
+.modal-info strong {
+    margin-right: 5px;
+}
+
+/* 3 pontos verticais */
+.card-actions .btn-more {
+    background: transparent;
+    border: none;
+    color: white;
+    font-size: 20px;
+    padding: 6px;
+    border-radius: 8px;
+    transition: 0.25s ease;
+}
+
+/* HOVER DOS 3 PONTOS */
+.card-actions .btn-more:hover {
+    background: rgba(255, 255, 255, 0.15);
+    transform: scale(1.15);
+}
+
