--- a/public/CSS/cadastro.css
+++ b/public/CSS/cadastro.css
@@ -423,4 +423,16 @@ footer h1 {
   justify-content: center;
   margin-top: 10px;
 }
- 
+
+input:disabled, 
+select:disabled {
+    background-color: #364a5f;
+    color: #d3d6da;
+    border-color: #454648;
+    cursor: not-allowed;
+    opacity: 1;
+}
+
+input:disabled::placeholder {
+    color: #6c757d;
+}
