--- a/public/CSS/quemsomos.css
+++ b/public/CSS/quemsomos.css
@@ -72,7 +72,7 @@
     font-size: 1rem;
     letter-spacing: 0.5px;
     line-height: 20px;
-    text-align: center;
+    text-align: justify;
 }
 
 .role {
