--- a/public/CSS/comparativos.css
+++ b/public/CSS/comparativos.css
@@ -209,24 +209,136 @@ hr {
     z-index: 999;
 }
 
+
+
 /* container modal */
 .modal-content {
+  background: #fff;
+  width: 380px;
+  padding: 20px;
+  border-radius: 12px;
+  color: #00283a;
+
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
+}
+
+/* modal detalhes */
+
+.modal-comparativo {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0,0,0,0.6);
+    justify-content: center;
+    align-items: center;
+    z-index: 99999;
+}
+
+.modal-card {
     background: #fff;
-    width: 380px;
-    padding: 20px;
-    border-radius: 12px;
+    width: 600px;
+    padding: 25px;
+    border-radius: 15px;
+    position: relative;
     text-align: center;
     color: #00283a;
 }
+
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: #00354d;
+    color: white;
+    width: 30px;
+    height: 30px;
+    font-size: 20px;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+
+.topo {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.lado {
+    text-align: center;
+}
+
+.flag {
+    width: 120px;
+    border-radius: 5px;
+}
+
+.x {
+    font-size: 40px;
+    font-weight: 800;
+}
+
+.comparacao {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 25px 0;
+}
+
+.comparacao .coluna {
+    width: 30%;
+}
+
+.comparacao .valor {
+    font-size: 22px;
+    font-weight: bold;
+}
+
+.comparacao .titulo {
+    width: 40%;
+    font-weight: bold;
+}
+
+.linha {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    padding: 12px 0;
+    border-bottom: 1px solid #ccc;
+}
+
+.btn-delete {
+    margin-top: 30px;
+    background: #00283a;
+    color: white;
+    padding: 8px 22px;
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+}
+
 
 /* titulo */
 .modal-content h3 {
     margin-bottom: 15px;
 }
 
+.selectEstado{
+  display: flex;
+  width: 50%;
+  height: 30%;
+  background-color: #00354d;
+}
+
+.selec
 /* select do modal */
 .modal-content select {
-    width: 100%;
+    width: 50%;
     padding: 8px;
     margin: 8px 0;
     border: 1px solid #ccc;
@@ -236,8 +348,9 @@ hr {
 /* botoes do modal */
 .modal-buttons {
     display: flex;
-    justify-content: space-between;
     margin-top: 15px;
+    justify-content: space-between;
+    width: 70%;
 }
 
 .modal-buttons button {
@@ -292,6 +405,28 @@ hr {
     animation: modalEntrada 0.25s ease;
 }
 
+.colunas-modal {
+    display: grid;
+    grid-template-columns: 1fr 1fr; /* duas colunas iguais */
+    gap: 20px;
+    width: 100%;
+}
+
+/* cada coluna */
+.coluna {
+    display: flex;
+    flex-direction: column;
+}
+
+/* garantir espaçamento */
+.coluna label {
+    margin-top: 10px;
+    font-weight: 600;
+}
+
+.coluna select {
+    margin-top: 5px;
+}
 
 /* Botão fechar */
 .modal-close {
@@ -340,4 +475,3 @@ hr {
     background: rgba(255, 255, 255, 0.15);
     transform: scale(1.15);
 }
-
