--- a/public/CSS/slack.css
+++ b/public/CSS/slack.css
@@ -124,3 +124,7 @@ p { text-align: center; margin-bottom: 25px; color: #666; }
 .slider:before { position: absolute; content: ""; height: 18px; width: 18px; left: 4px; bottom: 4px; background-color: white; transition: .4s; border-radius: 50%; }
 input:checked + .slider { background-color: #2ecc71; }
 input:checked + .slider:before { transform: translateX(24px); }
+
+body{
+    overflow: hidden;
+}
