--- a/public/CSS/slack.css
+++ b/public/CSS/slack.css
@@ -68,7 +68,7 @@ p { text-align: center; margin-bottom: 25px; color: #666; }
     border: 1px solid #ddd;
     border-radius: 6px;
     font-size: 14px;
-}
+}   
 
 /* GRID DE CARDS */
 .grid-cards {
@@ -76,6 +76,9 @@ p { text-align: center; margin-bottom: 25px; color: #666; }
     grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
     gap: 20px;
     margin-top: 20px;
+    overflow-y: auto ;
+    height: 250px;
+
 }
 
 /* CARD DE NOTIFICAÇÃO */
